--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,14 +3,13 @@ import { Image } from 'astro:assets';
 import type { CollectionEntry, MarkdownHeading } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
 import Header from '../components/Header.astro';
 
 type Props = CollectionEntry<'blog'>['data'] & {
 	headings?: MarkdownHeading[];
 };
 
-const { title, description, pubDate, updatedDate, heroImage, headings = [] } = Astro.props;
+const { title, description, heroImage, headings = [] } = Astro.props;
 ---
 
 <html lang="en">
@@ -62,18 +61,6 @@ const { title, description, pubDate, updatedDate, heroImage, headings = [] } = A
 			}
 			.title h1 {
 				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: #666;
-				transition: color 0.2s ease;
-			}
-			
-			html.dark .date {
-				color: #aaaaaa;
-			}
-			.last-updated-on {
-				font-style: italic;
 			}
 			.toc {
 				position: sticky;
@@ -215,16 +202,6 @@ const { title, description, pubDate, updatedDate, heroImage, headings = [] } = A
 				<div class="article-container">
 					<div class="prose">
 						<div class="title">
-							<div class="date">
-								<FormattedDate date={pubDate} />
-								{
-									updatedDate && (
-										<div class="last-updated-on">
-											Last updated on <FormattedDate date={updatedDate} />
-										</div>
-									)
-								}
-							</div>
 							<h1>{title}</h1>
 							<hr />
 						</div>
