UI精修：详情页顶部Logo与按钮居中固定

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -28,7 +28,7 @@ const { title, description, heroImage, headings = [] } = Astro.props;
 				width: calc(100% - 2em);
 				max-width: 100%;
 				margin: 0;
-				padding-top: 0;
+				padding-top: 80px;
 				box-sizing: border-box;
 				overflow-x: hidden;
 			}
