--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,9 @@ const { title, description = '' } = Astro.props;
 		<Footer />
 	</body>
 	<style>
+		main {
+			padding-top: 80px;
+		}
 		/* 水印容器：固定定位，占满全屏，不挡鼠标事件 */
 		.fixed-watermark-container {
 			position: fixed !important;
