--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const posts = (await getCollection('blog')).sort(
 			.post-list-container {
 				max-width: 720px;
 				margin: 0 auto;
-				padding: 2rem 2rem 8rem 2rem;
+				padding: 80px 2rem 8rem 2rem;
 				box-sizing: border-box;
 				overflow-x: hidden;
 				width: 100%;
