--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from 'astro:assets';
 import type { CollectionEntry, MarkdownHeading } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
@@ -8,12 +7,12 @@ type Props = CollectionEntry<'blog'>['data'] & {
 	headings?: MarkdownHeading[];
 };
 
-const { title, description, heroImage, headings = [] } = Astro.props;
+const { title, description, headings = [] } = Astro.props;
 ---
 
 <html lang="en">
 	<head>
-		<BaseHead title={title} description={description} image={heroImage} />
+		<BaseHead title={title} description={description} />
 		<style>
 			html,
 			body {
@@ -290,15 +289,6 @@ const { title, description, heroImage, headings = [] } = Astro.props;
 				padding-top: 80px;
 				box-sizing: border-box;
 				overflow-x: hidden;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				max-width: 100%;
-				height: auto;
 			}
 			.article-container {
 				display: flex;
@@ -585,9 +575,6 @@ const { title, description, heroImage, headings = [] } = Astro.props;
 		
 		<main>
 			<article>
-				<div class="hero-image">
-					{heroImage && <Image width={1020} height={510} src={heroImage} alt="" />}
-				</div>
 				<div class="article-container">
 					<div class="prose">
 						<slot />
